[DEBUG] combination 검사 시 null 허용